--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 .container-div {
     position: relative;
-    display: inline; /* Faz com que se houver um filho com display em "block", pegue a largura & altura dele */ 
+    display: inline-block; /*O "inline" faz com que se houver um filho com display em "block", pegue a largura & altura dele */ 
 }
 
 .container-health-timer-ui {
@@ -18,6 +18,9 @@
 .timer {
     width: 100px;
     height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: red;
     flex-shrink: 0; /* Retira a flexibilidade de se adaptar com a largura, quando se passa do valor o conjunto de elementos da tela */ 
 }
@@ -56,4 +59,13 @@
     bottom: 0;
     right: 0;
     background-color: blue;
+}
+
+.winner-game {
+    position: absolute;
+    color: white;
+    display: none;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
